# trackit

./: Cargo.toml  README.md
crates/atoms/: Cargo.toml
crates/atoms/src/: lib.rs
crates/atoms/src/widgets/: mod.rs  modal.rs  radial_progress_bar.rs
crates/trackit_core/: Cargo.toml
crates/trackit_core/src/: lib.rs
src/: main.rs
src/widgets/: mod.rs  modal.rs  tasks.rs
