[package]
name = "trackit"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
iced = { version = "0.13.1", features = ["canvas", "tokio", "advanced"] }

[dependencies]
iced.workspace = true

[dependencies.atoms]
path = "crates/atoms"

[dependencies.trackit_core]
path = "crates/trackit_core"

[dependencies.iced_aw]
version = "0.11"
features = ["number_input"]
